<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>de.cuioss</groupId>
        <artifactId>cui-java-parent</artifactId>
        <version>1.4.4</version>
        <relativePath/>
    </parent>
    <groupId>de.cuioss.sheriff.oauth</groupId>
    <artifactId>oauth-sheriff-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>OAuth Sheriff Parent</name>
    <description>A comprehensive framework for validating OAuth/JWT tokens in multi-issuer environments.
        The module provides robust token parsing, validation, and management capabilities
        with a focus on security and ease of use, leveraging standard JDK cryptographic providers.
    </description>

    <url>https://github.com/cuioss/OAuthSheriff/</url>
    <modules>
        <module>bom</module>
        <module>oauth-sheriff-core</module>
        <module>oauth-sheriff-quarkus-parent</module>
        <module>benchmarking</module>
    </modules>
    <scm>
        <url>https://github.com/cuioss/OAuthSheriff/</url>
        <connection>
            scm:git:https://github.com/cuioss/OAuthSheriff.git
        </connection>
        <developerConnection>
            scm:git:https://github.com/cuioss/OAuthSheriff/
        </developerConnection>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <url>https://github.com/cuioss/OAuthSheriff/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <version.quarkus>3.32.0</version.quarkus>
        <frontend.node.version>v22.22.0</frontend.node.version>
        <frontend.npm.version>10.9.2</frontend.npm.version>
    </properties>

</project>
